--- a/UI.css
+++ b/UI.css
@@ -3,6 +3,7 @@
     font-family: "Ubuntu","WenQuanYi Micro Hei" !important;
 }
 
+pre, 
 code span, /*stackoverflow.com*/
 code, kbd, samp, var {
     font-family: "Iosevka Medium", "WenQuanYi Micro Hei", monospace !important;
