--- a/UI.css
+++ b/UI.css
@@ -1,55 +1,42 @@
 /* i really want this to be global */
-
 * {
     font-family: "Ubuntu","WenQuanYi Micro Hei" !important;
-	/*text-shadow: 0.05em 0.05em 0.2em #999999 !important;*/
 }
 
-pre, 
+pre,
 code span, /*stackoverflow.com*/
 code, kbd, samp, var {
     font-family: "Iosevka Medium", "WenQuanYi Micro Hei", monospace !important;
 }
 
-@-moz-document url("http://10.21.3.101:8787/") {
-* {
-    /*font-family: "Consolas","WenQuanYi Micro Hei" !important;*/
-    font-family: "Iosevka","WenQuanYi Micro Hei" !important;
+@-moz-document domain("github.com") {
+
+pre span,
+tbody tr td span, 
+tbody tr td {
+    font-family: "Iosevka Medium", "WenQuanYi Micro Hei", monospace !important;
 }
 
-textarea, pre, code, kbd, samp, var, tt {
+.blob-code {
+	font-size:110%
+}
+}
+
+@-moz-document domain("kiwivm.64clouds.com") {
+input {
+    font-family: "Iosevka Medium", "WenQuanYi Micro Hei", monospace !important;
+}
+}
+
+@-moz-document url("http://10.21.3.101:8787/") {
+textarea, tt {
     font-family: "Iosevka", "WenQuanYi Micro Hei", monospace !important;
 }
 }
 
-@-moz-document url-prefix("https://github.com/"), url-prefix("https://gist.github.com") {
-* {
-    font-family: "Ubuntu","WenQuanYi Micro Hei" !important;
-    font-size:100%;
-}
-
-pre,
-pre span,
-tbody tr td span,
-tbody tr td,
-code span,
-code, kbd, samp, var {
-    font-family: "Iosevka Medium", "WenQuanYi Micro Hei", monospace !important;
-    font-size:110%;
-}
-}
-
-@-moz-document url-prefix("https://www.codecademy.com") {
-* {
-    font-family: "Ubuntu","WenQuanYi Micro Hei" !important;
-	/*text-shadow: 0.05em 0.05em 0.2em #999999 !important;*/
-}
-
-pre, 
-code span, /*stackoverflow.com*/
-pre span span, /*codecademy.com*/
-div span, 
-code, kbd, samp, var {
+@-moz-document url("http://www.codecademy.com/") {
+pre span span, 
+div span {
     font-family: "Iosevka Medium", "WenQuanYi Micro Hei", monospace !important;
     font-size:120%;
 }
