--- a/UI.css
+++ b/UI.css
@@ -1,3 +1,5 @@
+/* https://userstyles.org/styles/103278/ui */
+
 /* i really want this to be global */
 * {
     font-family: "Ubuntu","WenQuanYi Micro Hei" !important;
