--- a/UI.css
+++ b/UI.css
@@ -2,7 +2,7 @@
 
 /* i really want this to be global */
 * {
-    font-family: "Fira Sans","WenQuanYi Micro Hei" !important;
+    font-family: "Port Lligat Slab","WenQuanYi Micro Hei" !important;
     /*font-family: "Ubuntu","WenQuanYi Micro Hei" !important;*/
 }
 
