--- a/stylish/font.css
+++ b/stylish/font.css
@@ -4,10 +4,12 @@
     /*font-family: "kreon Light","WenQuanYi Micro Hei" !important;*/
 }
 
+.formBox div p, 
+blockquote, blockquote b, blockquote p, 
 .sourceLine, 
 #code_JUT ol li,
 pre.r a, 
-pre, pre span, li span, pre.rsplus, 
+pre, pre span, li span, pre.rsplus, pre b, 
 [action="/sqlcmd-sqlcourse2"] textarea, 
 .container div code, 
 .codeMirrors, 
@@ -20,30 +22,17 @@ code span, /*stackoverflow.com*/
 code span a, code date, code chr, code int, 
 code, kbd, samp, var {
     font-family: "Monaco", "WenQuanYi Micro Hei", monospace !important;
-    font-size:90%;
-}
-
-
-@-moz-document domain("codecademy.com") {
-pre, pre span, li span, pre.rsplus, 
-.container div code, 
-.codeMirrors, 
-.ace_line span, .ace_line,  
-.rsplus, 
-.blob-code, .blob-code span, .blob-num, 
-.r.plain, .r.functions, .r.string, .r.keyword, 
-code.plain, code.functions, code.string, code.keyword, code.spaces, code.value,   
-code span, /*stackoverflow.com*/
-code span a, 
-code, kbd, samp, var {
     font-size:100%;
 }
 
-}
 
-@-moz-document url("http://23.106.137.247:8787/"), url("http://slj.space:8787/"), url("http://121.43.101.233:8787/"), domain("github.com"), domain("stackoverflow.com"), domain("github.io"), domain("stackexchange.com"), domain("superuser.com"), domain("askubuntu.com"), domain("localhost") {
-
-pre, pre span, li span, pre.rsplus, 
+@-moz-document url("http://23.106.137.247:8787/"), url("http://slj.space:8787/"), url("http://121.43.101.233:8787/"), url("http://192.168.31.119:8787/"), url("http://192.168.15.128:8787/"), domain("stackoverflow.com"), domain("github.io"), domain("stackexchange.com"), domain("superuser.com"), domain("askubuntu.com"), domain("datacamp.com") {
+.formBox div p, 
+blockquote, blockquote b, blockquote p, 
+.sourceLine, 
+#code_JUT ol li,
+pre.r a, 
+pre, pre span, li span, pre.rsplus, pre b, 
 /*tbody tr td span,*/ 
 tbody tr td, 
 .line, 
@@ -54,7 +43,7 @@ tbody tr td,
 .ace_line span, .ace_line,  
 .rsplus, 
 .blob-code, .blob-code span, .blob-num, 
-.r.plain, .r.functions, .r.string, .r.keyword, 
+code.r, .r.plain, .r.functions, .r.string, .r.keyword, 
 code.plain, code.functions, code.string, code.keyword, code.spaces, code.value,   
 code span, /*stackoverflow.com*/
 code span a, 
@@ -64,16 +53,16 @@ code, kbd, samp, var {
 }
 }
 
-@-moz-document url("http://23.106.137.247:8787/"), url("http://slj.space:8787/"), url("http://121.43.101.233:8787/"), domain("kiwivm.64clouds.com") {
+@-moz-document url("http://23.106.137.247:8787/"), url("http://slj.space:8787/"), url("http://121.43.101.233:8787/"), url("https://rstudio.cloud/project/10981"), url("https://rstudio.cloud/project/10981"), url("http://192.168.31.119:8787/"), url("http://192.168.15.128:8787/"), domain("kiwivm.64clouds.com") {
 * {
     font-family: "PragmataPro", "WenQuanYi Micro Hei", monospace !important;
-    font-size:100%;
+    font-size: 100%;
 }
 }
 
 @-moz-document url("http://digg.com/reader"), url-prefix("https://mail.qq.com") {
 * {
-    font-family: "kreon Light","STXihei" !important;
+    font-family: "kreon Light", "STXihei" !important;
     /*STXihei*/
 }
 }
